# JBaseESP32

./: CMakeLists.txt  README.md
ads7828/: ads7828.cpp  ads7828.hpp
captivePortal/: captivePortal.cpp  captivePortal.hpp  reqs.txt
esp32ioPin/: esp32ioPin.cpp  esp32ioPin.hpp
esp32nvs/: esp32nvs.cpp  esp32nvs.hpp  reqs.txt
esp32uartPort/: esp32uartPort.cpp  esp32uartPort.hpp
httpClient/: httpClient.cpp  httpClient.hpp  reqs.txt
i2cPort/: i2cPort.cpp  i2cPort.hpp
sht40/: sht40.cpp  sht40.hpp
spiPort/: spiPort.cpp  spiPort.hpp
tca9534/: tca9534.cpp  tca9534.hpp
tcpClient/: tcpClient.cpp  tcpClient.hpp
w5500Adapter/: w5500Adapter.cpp  w5500Adapter.hpp
w5500Adapter/internal/: w5500Hardware.cpp
wifiAdapter/: wifiAdapter.hpp
